--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
   <h1>📘 HTML + CSS Cheat Sheet (Student Friendly)</h1>
   <p>This page demonstrates important HTML and CSS with examples and notes. Perfect for beginners!</p>
+    <p>UPSKILL STUDIO</p>
 
   <!-- ========== HTML PART ========== -->
   <section>
