--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <h1>📘 HTML + CSS Cheat Sheet (Student Friendly)</h1>
   <p>This page demonstrates important HTML and CSS with examples and notes. Perfect for beginners!</p>
     <p>UPSKILL STUDIO</p>
+    <p>by AaronV</p>
 
   <!-- ========== HTML PART ========== -->
   <section>
